# RV-1.0-sql_server

./: .gitignore  QTJsonToSQL.sln  README.md  clear_drive.sql  drive.sql  github-desktop-howto.docx  install.sh
QTJsonToSQL/: CMakeLists.txt  QTJsonToSQL.pro  QTJsonToSQL.vcxproj  QTJsonToSQL.vcxproj.filters  SensorsClass.cpp  SensorsClass.h  config.json  main.cpp
QTJsonToSQL/json/: 1671443533.945353.json
